Bug 170565 - FILESAVE XLSX SUM/MAX/MIN formula without arguments saved invalid
Summary: FILESAVE XLSX SUM/MAX/MIN formula without arguments saved invalid
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:26.8.0 target:26.2.1 target:26...
Keywords:
Depends on:
Blocks: XLSX-Corrupted Cell-Formula
  Show dependency treegraph
 
Reported: 2026-02-02 04:31 UTC by Aron Budea
Modified: 2026-02-25 09:17 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Sample ODS (8.13 KB, application/vnd.oasis.opendocument.spreadsheet)
2026-02-02 04:31 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2026-02-02 04:31:44 UTC
Created attachment 205307 [details]
Sample ODS

Open the attached ODS, save it to XLSX and try opening it in Excel. It fails to open the file.

The ODS contains the following unusual formula:
- SUM() - gives result 0, but invalid in Excel,
- MAX() - gives Err:511, but invalid in Excel,
- MIN() - gives Err:511, but invalid in Excel.

These should be exported in a way that the file can still be opened in Excel: SUM with an extra 0 argument, and MAX/MIN with some sort of error argument. (#VALUE! maybe)
Comment 1 Aron Budea 2026-02-02 04:38:06 UTC
Already in 3.5.0.3
Comment 2 Commit Notification 2026-02-05 06:22:48 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3cbf4957d33c7414b5cd02481136679b5c6a834e

tdf#170565 save empty SUM/MAX/MIN functions with parameters to XLSX

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-02-05 21:47:07 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/4a4cbf701ff556982f78848f8c44021b7edeb1d2

tdf#170565 save empty SUM/MAX/MIN functions with parameters to XLSX

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-02-24 22:36:37 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8ea0c3678ffa87af77566add850b950361d17301

tdf#170565: Handle empty aggregate functions in XLSX

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-02-25 09:17:53 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/ae56f7fda59137a39329c8eead1bb4addf6569d8

tdf#170565: Handle empty aggregate functions in XLSX

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.