tdf#170565 save empty SUM/MAX/MIN functions with parameters to XLSX

Excel won't allow them with no parameters.

In Calc:
- SUM() is 0,
- MAX()/MIN() gives Err:511.

Save them to XLSX as SUM(0), MAX(#VALUE!) and MIN(#VALUE!).

Change-Id: I0f0d05290b67684df294611bd0612090abf1a672
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198543
Reviewed-by: Aron Budea <aron.budea@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 3cbf4957d33c7414b5cd02481136679b5c6a834e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198713
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>